Fixed alignment of Saved and explore page

--- a/src/globals.css
+++ b/src/globals.css
@@ -127,7 +127,7 @@
   }
 
   .explore-inner_container {
-    @apply max-w-5xl flex flex-col items-center w-full gap-6 md:gap-9;
+    @apply max-w-5xl flex-col flex-start justify-start w-full gap-6 md:gap-9;
   }
 
   .explore-search {
